--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>Fractions: 1/2, 3/4, ...</li>
         <li>Decimals: 0.5, 3.14, ...</li>
         <li>Irrational numbers: √2, π, ...</li>
+        <img src="Snapchat-962198552.jpg">
     </ul>
 </body>
 </html>
